--- a/requirements.txt
+++ b/requirements.txt
@@ -1,114 +1,20 @@
-apturl==0.5.2
 async-timeout==4.0.3
 attrs==23.2.0
 base58==2.1.1
 bcrypt==3.2.0
 beautifulsoup4==4.12.3
 blinker==1.4
-Brlapi==0.8.3
+build==1.1.1
 certifi==2020.6.20
+cffi==1.16.0
 chardet==4.0.0
 charset-normalizer==3.3.2
-chrome-gnome-shell==0.0.0
 click==8.0.3
 colorama==0.4.4
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dataclass-wizard==0.22.2
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docker==7.0.0
-docker-compose==1.29.2
-dockerpty==0.4.1
-dockertown==0.2.3
-docopt==0.6.2
-dt-authentication-daffy==0.1.16
-dt-data-api-daffy==1.2.0
-dtproject==1.0.6
-duckietown-docker-utils-daffy==6.1.1
-duckietown-shell==5.5.13
-duplicity==0.8.21
-ecdsa==0.18.0
-fasteners==0.14.1
-future==0.18.2
-gitdb==4.0.11
-GitPython==3.1.42
-httplib2==0.20.2
-humanfriendly==10.0
-idna==3.3
-ifaddr==0.2.0
-importlib-metadata==4.6.4
-jeepney==0.7.1
-jsonschema==3.2.0
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-lxml==5.1.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.0.1
-monotonic==1.6
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
-olefile==0.46
 packaging==23.2
-paramiko==2.9.3
-pexpect==4.8.0
-Pillow==9.0.1
-progressbar2==4.3.2
-protobuf==3.12.4
-psutil==5.9.8
-ptyprocess==0.7.0
-pycairo==1.20.1
-pycups==2.0.1
-pydantic==1.10.14
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pyrsistent==0.20.0
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==0.21.1
-python-utils==3.8.2
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.3.1
-reportlab==3.6.8
-requests==2.31.0
-requirements-parser==0.5.0
-SecretStorage==3.3.1
+pip-tools==7.4.1
+pycparser==2.21
+pyproject_hooks==1.0.0
 six==1.16.0
-smmap==5.0.1
 soupsieve==2.5
-systemd-python==234
-termcolor==2.4.0
-texttable==1.7.0
-tqdm==4.66.2
-typer==0.9.0
-types-setuptools==69.1.0.20240223
-typing_extensions==4.9.0
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-wadllib==1.3.6
-websocket-client==0.59.0
-whichcraft==0.6.1
-xdg==5
-xkit==0.0.0
-zeroconf==0.131.0
-zipp==1.0.0
+tomli==2.0.1
